objects/GraphicsPackImages__mdt.object
<CustomObject>
    <fields>
        <fullName>Graphic_Setting_ID__c</fullName>
        <label>Graphic Setting ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Flags</fullName>
                    <default>true</default>
                    <label>Flags</label>
                </value>
                <value>
                    <fullName>Silk</fullName>
                </value>
                <value>
                    <fullName>Theme</fullName>
                </value>
                <value>
                    <fullName>Animals</fullName>
                </value>
                <value>
                    <fullName>Halloween</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Robots</fullName>
                </value>
                <value>
                    <fullName>FarmFresh</fullName>
                </value>
                <value>
                    <fullName>Monsters</fullName>
                </value>
                <value>
                    <fullName>Vacation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Graphics Pack Image</label>
    <pluralLabel>Graphics Pack Images</pluralLabel>
</CustomObject>